--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -597,3 +597,55 @@ a[class~="headerlink"]:visited {
         padding-top: 2px !important;
     }
 }
+
+
+.feature-sub-heading {
+    font-weight: bold;
+    margin-bottom: 6px;
+    font-size: 20px;
+    flex: 1 1 auto;
+    line-height: 35px;
+}
+
+.key-features-slide{
+    margin-bottom: 100px;
+    margin-top: 50px;
+}
+
+.text-container {
+    display: flex;
+    flex-wrap: wrap;
+    float: left;
+    margin-right: 50px;
+    width: 45%;
+}
+
+.step-number {
+    flex: 0 0 auto;
+    margin-right: 20px;
+    margin-bottom: 0;
+    border-radius: 50%;
+    font-size: 20px;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.feature-main-text{
+    padding-left: 55px;
+}
+
+.yellow {
+    background-color: #ffd43b;
+}
+
+.blue {
+    background-color: #599dd2;
+}
+
+.grey {
+    background-color: #ccc;
+}
