Add formatter for CSS to Visual Code.

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -544,7 +544,7 @@ a[class~="headerlink"]:visited {
     display: flex;
     position: relative;
     border-top-right-radius: 10px;
-    box-shadow: 0 14px 26px rgba(0,0,0,0.04);
+    box-shadow: 0 14px 26px rgba(0, 0, 0, 0.04);
     transition: all 0.3s ease-out;
 
     /* TODO: Use our own color scheme, this is CCCCCC but somewhat transparent. */
@@ -553,14 +553,14 @@ a[class~="headerlink"]:visited {
 
 .hub-card:hover {
     transform: translateY(-5px) scale(1.005) translateZ(0);
-    box-shadow: 0 24px 36px rgba(0,0,0,0.11),
-      0 24px 46px var(--box-shadow-color);
+    box-shadow: 0 24px 36px rgba(0, 0, 0, 0.11),
+        0 24px 46px var(--box-shadow-color);
 }
 
 .hub-card:active {
     transform: scale(1) translateZ(0);
-    box-shadow: 0 15px 24px rgba(0,0,0,0.11),
-      0 15px 24px var(--box-shadow-color);
+    box-shadow: 0 15px 24px rgba(0, 0, 0, 0.11),
+        0 15px 24px var(--box-shadow-color);
 }
 
 .hub-card-link {
