Added remaining colors from the agreed palette

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -2,6 +2,8 @@
     --our-color-yellow: #ffd43b;
     --our-color-blue: #599dd2;
     --our-color-grey: #ccc;
+    --our-color-dark-blue: #2a3990;
+    --our-color-green: #00916e;
 }
 
 /* Google Chrome still hates our menu
