Styling: Allow text in tables to line wrap
* Otherwise scroll bars for long text occur

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -16,6 +16,11 @@ html {
     max-width: 1000px !important;
 }
 
+.wy-table-responsive table td {
+  white-space:normal;
+}
+
+
 .sd-col {
     margin-bottom: 2rem;
 }
