--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -959,10 +959,14 @@ details.sd-dropdown > .sd-summary-content {
 		transform 0.4s ease;
 	opacity: 1;
 	transform: translateY(0);
-	display: flex;
+	display: none;
 	justify-content: center;
 	flex-direction: column;
 	gap: 24px;
+}
+
+.carousel-main:first-child {
+    display: flex;
 }
 
 .carousel-main p:first-of-type {
